Forced hibernate eager initialization. Changed from hibernate default conection pool to c3p0 pool. Rearranged final maven package organization.